# llvm-project

./: .gitignore
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir/Analysis/: AffineAnalysis.h  AffineStructures.h  FlatLinearValueConstraints.h
mlir/include/mlir/Analysis/Presburger/: IntegerPolyhedron.h  IntegerRelation.h  PWAFunction.h  Set.h  (+12 more)
mlir/include/mlir/AsmParser/: AsmParser.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Parser/: Parser.h
mlir/lib/Analysis/: AffineAnalysis.cpp  AffineStructures.cpp  FlatLinearValueConstraints.cpp  PresburgerSet.cpp
mlir/lib/Analysis/Presburger/: CMakeLists.txt  IntegerPolyhedron.cpp  IntegerRelation.cpp  PWAFunction.cpp  PWMAFunction.cpp  PresburgerBasicSet.cpp  PresburgerRelation.cpp  PresburgerSet.cpp  PresburgerSpace.cpp  Simplex.cpp  Utils.cpp
mlir/lib/AsmParser/: AffineParser.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Parser/: AffineParser.cpp
mlir/test/IR/: affine-set.mlir  invalid.mlir  parser.mlir
mlir/test/Transforms/: loop-fusion-2.mlir
mlir/test/lib/Transforms/: TestMemRefDependenceCheck.cpp
mlir/tools/run-presburger/: CMakeLists.txt  run-presburger.cpp
mlir/tools/run-presburger-hw/: CMakeLists.txt  run-presburger-hw.cpp
mlir/unittests/Analysis/: AffineStructuresTest.cpp
mlir/unittests/Analysis/Presburger/: CMakeLists.txt  IntegerPolyhedronTest.cpp  IntegerRelationTest.cpp  PWMAFunctionTest.cpp  Parser.h  ParserTest.cpp  PresburgerMapTest.cpp  PresburgerRelationTest.cpp  PresburgerSetTest.cpp  PresburgerSpaceTest.cpp  PrettyPrinter.h  SimplexTest.cpp  Utils.h
(+20 files in other folders)
